kubernetes/event/zeppelin/zeppelin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeppelin
  namespace: event
  labels:
    app: zeppelin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zeppelin
  template:
    metadata:
      labels:
        task: zeppelin
        k8s-app: zeppelin
        app: zeppelin
    spec:
      containers:
      - name: zeppelin
        ports:
        - name: http
          containerPort: 8080
        image: apache/zeppelin:0.8.2
        resources:
          limits:
            memory: "8192Mi"
            cpu: "800m"
        volumeMounts:
          - name: zeppelin
            mountPath: /notebook 
      volumes:
        - name: zeppelin
          persistentVolumeClaim:
            claimName: zeppelin-claim
---
apiVersion: v1
kind: Service
metadata:
  name: zeppelin
  labels:
    app: zeppelin
  namespace: event
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: zeppelin
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zeppeliningress
  namespace: event
spec:
  rules:
  - host: zeppelin.bas
    http:
      paths:
      - backend:
          serviceName: zeppelin
          servicePort: 80
  tls:
  - hosts:
    - zeppelin.bas
